# obsidian-c

./: .gitignore  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  ChangeLog  Configure  Doxyfile  LICENSE  Makefile  Makefile.am  NEWS  README.md  boot  compile_flags.txt  configure.ac  meson.build
.github/workflows/: blog.yml  build.yml  cmake-multi-platform.yml
.github/workspace/: cmake-multi-platform.yml
docker/: README.md
docker/ubuntu2204/: Dockerfile
docker/ubuntu2204/base/: Dockerfile
docker/ubuntu2204/github/: Dockerfile
docs/: snippets.md
docs/man/: obsidian.1
docs/project/: faq.md
examples/: hello.ob  math.ob  test.ob
src/: Makefile.am  ast.c  common.c  error.c  lexer.c  lexer.l  obsidian.c  parser.c  parser.y
src/include/: ast.h  color.h  common.h  error.h  lexer.h  parser.h
tests/: Makefile.am  lexer_tests.c
tests/include/: lexer_tests.h
